<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/balance"
        app:titleCentered="true"
        app:titleTextColor="@color/dodger_blue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_balance"
        android:textColor="@color/dodger_blue"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amountInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/cardNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/full_name_on_card"
        android:textColor="@color/dodger_blue"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/amountInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameOnCardInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/example_john_jason_doe"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/cardNameTextView" />


    <TextView
        android:id="@+id/cardNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/credit_card_number"
        android:textColor="@color/dodger_blue"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/nameOnCardInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/creditCardNumberInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/card_number_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberTextView" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditCardNumberInput" />

    <TextView
        android:id="@+id/cardExpireDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiration_date"
        android:textColor="@color/dodger_blue"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/expireDateMonth"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/cardExpireDateTextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/expireDateYear"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/cardExpireDateTextView"
        app:layout_constraintStart_toEndOf="@+id/expireDateMonth"
        app:layout_constraintTop_toBottomOf="@+id/cardExpireDateTextView" />

    <TextView
        android:id="@+id/cardCVVCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvv_code"
        android:textColor="@color/dodger_blue"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cardCVVInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/cvv_hint"
        android:maxLength="3"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintTop_toBottomOf="@+id/cardCVVCode" />

    <Button
        android:id="@+id/buyNowButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dodger_blue"
        android:padding="20dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/cardCVVInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
